--- a/pr7_1.html
+++ b/pr7_1.html
@@ -1,6 +1,7 @@
 <html>
 <head>
     <script src='prjs7_1.js'></script>
+    <script src='join.js'></script>
     <link rel="stylesheet" href="index.css">
 
 
