--- a/pr7_1.html
+++ b/pr7_1.html
@@ -2,6 +2,11 @@
 <head>
     <script src='prjs7_1.js'></script>
     <script src='join.js'></script>
+    <script src='pop.js'></script>
+    <script src='push.js'></script>
+    <script src='shift.js'></script>
+    <script src='unshift.js'></script>
+    <script src='reverse.js'></script>
     <link rel="stylesheet" href="index.css">
 
 
