:rocket: change names

--- a/index.html
+++ b/index.html
@@ -1,49 +1,17 @@
 <html>
+<head>
+    <script src='prjs7_1.js'></script>
+    <script src='join.js'></script>
+    <script src='pop.js'></script>
+    <script src='push.js'></script>
+    <script src='shift.js'></script>
+    <script src='unshift.js'></script>
+    <script src='reverse.js'></script>
+    <link rel="stylesheet" href="index.css">
 
 
-</html>
-<script>
-    //create Array
-    var students = new Array("Thomas", "Roger", "Amber", "Jennifer")
-    
-    //set variables
-    var student0 = "Thomas";
-    var student1 = "Roger";
-    var student2 = "Amber";
-    var student3 = "Jennifer";
+</head>
+<body>
 
-    //write variables
-    document.write("<p>My Students for variables:</p>");
-    document.write(student0 + "<br>");
-    document.write(student1 + "<br>");
-    document.write(student2 + "<br>");
-    document.write(student3 + "<br><br>");
-
-    //write array
-    document.write("<p>My Students for print array:</p>");
-    document.write(students + "<br><br>");
-
-    //write in zero position
-    document.write("<p>My Students position zero in array:</p>");
-    document.write(students[0] + "<br><br>");
-
-    //write in all positions
-    document.write("<p>My Students for all positions:</p>");
-    document.write(students[0] + "<br>");
-    document.write(students[1] + "<br>");
-    document.write(students[2] + "<br>");
-    document.write(students[3] + "<br><br>");
-
-    //array length
-    document.write("<p>Através dessa função podemos saber que nesse array temos " + students.length + " posições </p>");
-
-    //write my students array in loop
-    document.write("<p>My Students write in loop:</p>");
-    for (var i = 0; i < students.length; i++) {
-        document.write(students[i] + "<br>");
-    }
-    document.write("<br>");
-
-
-
-</script>
+</body>
+</html> 
