--- a/index.html
+++ b/index.html
@@ -1,12 +1,7 @@
 <html>
 <head>
     <script src='prjs7_1.js'></script>
-    <script src='join.js'></script>
-    <script src='pop.js'></script>
-    <script src='push.js'></script>
-    <script src='shift.js'></script>
-    <script src='unshift.js'></script>
-    <script src='reverse.js'></script>
+    <script src='arrays.js'></script> 
     <link rel="stylesheet" href="index.css">
 
 
